# OpenGL

./: .gitignore
Atelier 4/src/: MeshScene.cpp  OpenGlResource.h  main.cpp
Atelier2/: CMakeLists.txt
Atelier2/src/: Scene.h  TriangleScene.cpp  TriangleScene.h  main.cpp
Atelier3/: CMakeLists.txt
Atelier3/shaders/: normal_f.glsl  normal_v.glsl  proj_v.glsl  simple_f.glsl  simple_v.glsl
Atelier3/src/: CubeScene.cpp  CubeScene.h  MeshScene.cpp  MeshScene.h  Scene.h  TriangleScene.cpp  TriangleScene.h  main.cpp
Atelier4/: CMakeLists.txt
Atelier4/shaders/: light_f.glsl  light_v.glsl
Atelier4/src/: MeshScene.cpp  MeshScene.h  OpenGlDef.h  OpenGlProgram.h  OpenGlShader.h
Template/: CMakeLists.txt
Template/.cache/clangd/index/: context.c.37553F8B81908DE1.idx  egl_context.c.A786297CF031459F.idx  gl.c.D2C2352EBE9705B2.idx  gl.h.583947DC78D7964C.idx  glfw3.h.FF7D6B2D55427F85.idx  glfw3native.h.5695F0746C63C0C9.idx  init.c.F17DE72A01000D4F.idx  input.c.EDAE7C4997CB0E50.idx  internal.h.E974CAC6FD879A6D.idx  khrplatform.h.7F78B072228DC905.idx  main.cpp.7B016201F96C0D07.idx  mappings.h.068696B3E53DB4D2.idx  monitor.c.7BB7AB526D20FFC9.idx  null_init.c.13ABC772BD98E33D.idx  null_joystick.c.9095FF2D0B376060.idx  null_joystick.h.D970CCA481992F72.idx  null_monitor.c.23D59E6EF7F4E7BF.idx  null_platform.h.74F7D64273800995.idx  null_window.c.8369FBCB38000E05.idx  osmesa_context.c.6337503716A6B01A.idx  platform.c.BD1C85EA046A14EC.idx  platform.h.E133498CFB435B52.idx  vulkan.c.536B28181F02BA35.idx  wgl_context.c.B9ED75F5BF64984C.idx  win32_init.c.28D5FBCEDF42B101.idx  win32_joystick.c.1F580F983FA17E45.idx  win32_joystick.h.82DFA783F63D3A21.idx  win32_module.c.292807EC80B884A7.idx  win32_monitor.c.87C51C5B6A9B3FFC.idx  win32_platform.h.FEE309AECD5C425B.idx  win32_thread.c.028B1091915003CE.idx  win32_thread.h.7A85BAE651E886A5.idx  win32_time.c.BF10E9829417F290.idx  win32_time.h.7EEB445BC0726C40.idx  win32_window.c.01753A46B3149639.idx  window.c.B3BDB9BDAB4EDFBB.idx
Template/src/: main.cpp
